<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.laam.moviedb_cleanarch.presentation.detail.movie.MovieDetailViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/movieDetail_img_poster"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:contentDescription="@string/movie_image"
                        android:scaleType="centerCrop"
                        android:visibility="@{viewModel.isNoData ? View.GONE : View.VISIBLE}"
                        app:imageUrl="@{viewModel.movieEntity.poster}"
                        app:layout_collapseMode="parallax"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="H,1:1.3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/poster_a_start_is_born" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:isRefreshing="@{viewModel.isLoading}"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:onRefreshListener="@{viewModel.onRefreshListener}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{viewModel.isNoData ? View.GONE : View.VISIBLE}">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/movieDetail_tv_title"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@{viewModel.movieEntity.name}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="How to Train Your Dragon: The Hidden World" />

                        <TextView
                            android:id="@+id/movieDetail_tv_tags"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.movieEntity.tags}"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/movieDetail_tv_title"
                            app:layout_constraintTop_toBottomOf="@id/movieDetail_tv_title"
                            tools:text="Action, Science Fiction, Adventure" />

                        <RatingBar
                            android:id="@+id/movieDetail_rb_rating"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:rating="@{viewModel.movieEntity.voteAverage / 2}"
                            app:layout_constraintStart_toStartOf="@id/movieDetail_tv_tags"
                            app:layout_constraintTop_toBottomOf="@id/movieDetail_tv_tags"
                            tools:rating="4" />

                        <TextView
                            android:id="@+id/movieDetail_tv_rating"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@{Float.toString(viewModel.movieEntity.voteAverage)}"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="@+id/movieDetail_rb_rating"
                            app:layout_constraintStart_toEndOf="@+id/movieDetail_rb_rating"
                            app:layout_constraintTop_toTopOf="@+id/movieDetail_rb_rating"
                            tools:text="7.5" />

                        <ImageView
                            android:id="@+id/movieDetail_img_date"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_marginTop="4dp"
                            android:contentDescription="@string/date_icon"
                            android:src="@drawable/ic_baseline_date_range_24"
                            app:layout_constraintStart_toStartOf="@+id/movieDetail_rb_rating"
                            app:layout_constraintTop_toBottomOf="@+id/movieDetail_rb_rating" />

                        <TextView
                            android:id="@+id/movieDetail_tv_releaseDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@{viewModel.movieEntity.releaseDate}"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="@+id/movieDetail_img_date"
                            app:layout_constraintStart_toEndOf="@+id/movieDetail_img_date"
                            app:layout_constraintTop_toTopOf="@+id/movieDetail_img_date"
                            tools:text="10/05/2018" />

                        <TextView
                            android:id="@+id/movieDetail_tv_overview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@{viewModel.movieEntity.overview}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/movieDetail_img_date"
                            app:layout_constraintTop_toBottomOf="@id/movieDetail_img_date"
                            tools:text="Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world." />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.core.widget.NestedScrollView>

                <ImageView
                    android:id="@+id/movieDetail_img_noData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/empty_data_image"
                    android:padding="60dp"
                    android:src="@drawable/ic_undraw_no_data"
                    android:visibility="@{viewModel.isNoData ? View.VISIBLE : View.GONE}"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />
            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>