...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="8dp"
                android:visibility="@{viewModel.isEmptyData ? View.GONE : View.VISIBLE}"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="2"
                tools:listitem="@layout/item_movie" />

            <ImageView
                android:id="@+id/movie_img_empty"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/empty_data_image"
                android:padding="50dp"
                android:src="@drawable/ic_undraw_empty"
                android:visibility="@{viewModel.isEmptyData ? View.VISIBLE : View.GONE}"
...
